# tempo

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  ENHANCEMENTS.md  LICENSE  README.md  justfile  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  research-vi.md  research.md  skills-lock.json  tempo-flow-vi.html  tsconfig.json
crates/api/: Cargo.toml
crates/api/src/: config.rs  dto.rs  error.rs  history.rs  lib.rs  main.rs  metrics_defs.rs  routes.rs  state.rs  watcher.rs  ws.rs
crates/api/tests/: handlers.rs
crates/bench/: Cargo.toml
crates/bench/benches/: clearing.rs  marginal_fill.rs  wide_math.rs
crates/bench/src/: lib.rs  main.rs
crates/common/: Cargo.toml
crates/common/src/: backoff.rs  config.rs  error.rs  lib.rs  rpc.rs  signer.rs  telemetry.rs  tx.rs
crates/keeper/: Cargo.toml
crates/keeper/src/: actions.rs  config.rs  engine.rs  error.rs  funding.rs  health.rs  lib.rs  main.rs  metrics_defs.rs  snapshot.rs
crates/liquidator/: Cargo.toml
crates/liquidator/src/: actions.rs  config.rs  engine.rs  error.rs  health.rs  lib.rs  main.rs  metrics_defs.rs  snapshot.rs  source.rs
crates/mm-bot/: Cargo.toml
crates/mm-bot/src/: config.rs  error.rs  health.rs  lib.rs  main.rs  metrics_defs.rs  strategy.rs
crates/sdk/: Cargo.toml
crates/sdk/src/: accounts.rs  client.rs  consts.rs  error.rs  ids.rs  ix.rs  lib.rs  pda.rs  preflight.rs  retry.rs
crates/sim/: Cargo.toml  README.md
crates/sim/src/: artifact.rs  config.rs  error.rs  health.rs  lib.rs  main.rs  master_funder.rs  metrics_defs.rs  persona.rs  provision.rs  rng.rs  spl.rs  strategy.rs
program/: Cargo.toml  build.rs
program/src/: clearing.rs  cross_margin.rs  entrypoint.rs  errors.rs  funding.rs  kani_proofs.rs  lib.rs  margin.rs  mark.rs  oracle.rs  settle_money.rs  wide_math.rs
program/src/events/: authority_transferred.rs  chunk_processed.rs  clearing_finalized.rs  fill_settled.rs  funding_updated.rs  insurance_seeded.rs  insurance_withdrawn.rs  market_initialized.rs  market_params_updated.rs  market_pause_changed.rs  mod.rs  oracle_price_read.rs  oracle_repointed.rs  order_cancelled.rs  order_submitted.rs  position_liquidated.rs  shared.rs
program/src/instructions/: definition.rs  impl_instructions.rs  mod.rs  round.rs
program/src/instructions/accept_authority_transfer/: accounts.rs  data.rs  mod.rs  processor.rs
program/src/instructions/add_position_to_margin/: accounts.rs  data.rs  mod.rs  processor.rs
program/src/instructions/apply_insurance_withdraw/: accounts.rs  data.rs  mod.rs  processor.rs
program/src/instructions/apply_risk_update/: accounts.rs  data.rs  mod.rs  processor.rs
program/src/instructions/apply_set_oracle/: accounts.rs  data.rs  mod.rs  processor.rs
program/src/instructions/cancel_all_orders/: accounts.rs  data.rs  mod.rs  processor.rs
program/src/instructions/cancel_order/: accounts.rs  data.rs  mod.rs  processor.rs
program/src/instructions/clear_maker_quote/: accounts.rs  data.rs  mod.rs  processor.rs
program/src/instructions/close_maker_quote/: accounts.rs  data.rs  mod.rs  processor.rs
program/src/instructions/close_market/: accounts.rs  data.rs  mod.rs  processor.rs
program/src/instructions/close_position/: accounts.rs  data.rs  mod.rs  processor.rs
program/src/instructions/deposit/: accounts.rs  data.rs  mod.rs  processor.rs
program/src/instructions/emit_event/: processor.rs
program/src/instructions/finalize_clear/: accounts.rs  data.rs  mod.rs  processor.rs
program/src/instructions/force_reset/: accounts.rs  data.rs  mod.rs  processor.rs
program/src/instructions/init_collateral/: accounts.rs  data.rs  mod.rs  processor.rs
program/src/instructions/init_maker_quote/: accounts.rs  data.rs  mod.rs  processor.rs
program/src/instructions/init_margin_account/: accounts.rs  data.rs  mod.rs  processor.rs
program/src/instructions/init_position/: accounts.rs  data.rs  mod.rs  processor.rs
program/src/instructions/init_shard/: accounts.rs  data.rs  mod.rs  processor.rs
program/src/instructions/init_vault/: accounts.rs  data.rs  mod.rs  processor.rs
program/src/instructions/initialize_market/: accounts.rs  data.rs  mod.rs  processor.rs
program/src/instructions/liquidate/: accounts.rs  data.rs  mod.rs  processor.rs
program/src/instructions/liquidate_cross/: accounts.rs  data.rs  mod.rs  processor.rs
program/src/instructions/migrate_market/: accounts.rs  data.rs  mod.rs  processor.rs
program/src/instructions/migrate_position/: accounts.rs  data.rs  mod.rs  processor.rs
program/src/instructions/process_chunk/: accounts.rs  data.rs  mod.rs  processor.rs
program/src/instructions/process_maker_quote/: accounts.rs  data.rs  mod.rs  processor.rs
program/src/instructions/propose_authority_transfer/: accounts.rs  data.rs  mod.rs  processor.rs
program/src/instructions/propose_insurance_withdraw/: data.rs  (+3 more)
program/src/state/: clearing_result.rs  histogram.rs  maker_quote.rs  margin_account.rs  market.rs  mod.rs  order.rs  position.rs  user_collateral.rs  vault.rs
program/src/traits/: account.rs  event.rs  instruction.rs  mod.rs  pda.rs
program/src/utils/: account_utils.rs  event_utils.rs  macros.rs  mod.rs  pda_utils.rs  program_utils.rs
tests/integration-tests/: Cargo.toml
tests/integration-tests/src/: lib.rs
tests/integration-tests/tests/: active_order_count.rs  admin_lifecycle.rs  anti_spam.rs  benchmark.rs  cancel_all.rs  censorship.rs  close_lifecycle.rs  collateral.rs  conservation.rs  cross_margin.rs  determinism.rs  events.rs  fees.rs  force_reset.rs  funding.rs  happy_path.rs  ioc.rs  keeper_loop.rs  lifecycle.rs  liquidate.rs  liquidator_loop.rs  liveness.rs  maker_margin.rs  maker_quote.rs  maker_quote_fold.rs  maker_quote_settle.rs  margin_gate.rs  marginal_allocation.rs  marketable_fill.rs  migration.rs  mm_loop.rs  partial_liquidation.rs  pause.rs  phase_guards.rs  positions.rs  pretrade_safety.rs  resting_orders.rs  review_fixes.rs  security_c1_c5.rs  sharding.rs  (+10 more)
trident-tests/: Cargo.toml  README.md  Trident.toml
trident-tests/fuzz_tests/conservation/: invariants.rs  main.rs
(+181 files in other folders)
