[workspace]
members = [
    "program",
    "tests/integration-tests",
    "crates/tempo-math",
    "crates/common",
    "crates/sdk",
    "crates/keeper",
    "crates/bench",
    "crates/api",
    "crates/mm-bot",
    "crates/liquidator",
]
# The Trident transaction-level fuzz target is a standalone crate that
# depends on the external `trident-fuzz`/`trident-svm` toolchain. It is excluded
# from the default workspace so `cargo build`/`cargo test`/`cargo-build-sbf` stay
# self-contained; run it with the Trident CLI (see `trident-tests/README.md`).
exclude = [
    "trident-tests",
]
resolver = "2"

# Defense-in-depth: SBF builds use the release profile, which defaults
# to overflow-checks = false. Most arithmetic is already checked_*, but the raw
# i128/u128 ops in clearing/margin/position/funding could silently wrap. The CU
# benchmark shows ample headroom (<5% of the tx limit on the heaviest ix), so the
# checks are effectively free. Host tests (dev profile) already run with them.
[profile.release]
overflow-checks = true

[workspace.package]
version = "0.0.1"
edition = "2021"

[workspace.metadata.cli]
solana = "3.1.10"

[workspace.lints.rust]
unused_imports = "deny"
dead_code = "warn"
unused_variables = "warn"
deprecated = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(kani)',
] }

[workspace.dependencies]
codama = "^0.9.2"
serde_json = "^1.0.145"
const-crypto = "^0.3.0"
pinocchio = "^0.11.1"
pinocchio-log = "^0.5.1"
pinocchio-token = "0.6.0"
# Dev-only: enables `Address::find_program_address` on the host (non-solana)
# target so PDA-derivation unit tests can run. On-chain builds use the syscall.
# Pinned to =2.2.0 so the host-test `solana-address` unifies with the version
# LiteSVM (used by tests/integration-tests) pins exactly; 2.2.0 still provides
# `curve25519` + `find_program_address` for the program's PDA host unit tests.
solana-address = { version = "=2.2.0", features = ["curve25519"] }
pinocchio-system = "^0.6.1"
thiserror = "^2.0.17"
solana-security-txt = "^1.1.3"
borsh = "^1.6.1"
num-derive = "^0.4.0"
num-traits = "^0.2.0"

# Off-chain stack shared deps. Hoisted so a version bump is one line and crates
# can't drift; per-crate `features` are added locally on top of these.
tokio = { version = "1" }
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }
futures = "0.3"
async-trait = "0.1"
axum = "0.7"
solana-sdk = "3"
solana-client = "3"
solana-commitment-config = "3"
