[package]
name = "tempo-program"
version = { workspace = true }
edition = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]

[lints]
workspace = true

[features]
no-entrypoint = []
idl = []
devnet = []

[dependencies]
codama = { workspace = true }
const-crypto = { workspace = true }
pinocchio = { workspace = true, features = ["account-resize", "cpi"] }
pinocchio-log = { workspace = true }
pinocchio-system = { workspace = true }
pinocchio-token = { workspace = true }
thiserror = { workspace = true }
solana-security-txt = { workspace = true }

[build-dependencies]
codama = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
# Activates the `curve25519` feature on the shared solana-address crate so that
# `Address::find_program_address` is available when running host unit tests.
solana-address = { workspace = true }

# Kani builds the whole lib (not the test harness), so the dev-dep above is not
# active under `cargo kani`. Re-expose the same curve25519 shim for `cfg(kani)`
# so PDA-deriving state/instruction code compiles during formal verification.
[target.'cfg(kani)'.dependencies]
solana-address = { workspace = true }
