[package]
name = "tempo-liquidator"
version.workspace = true
edition.workspace = true
description = "The Tempo reference liquidator: a stateless, replica-safe, grief-safe risk backstop."

[[bin]]
name = "tempo-liquidator"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
tempo-common = { path = "../common" }
tempo-sdk = { path = "../sdk" }
tempo-math = { path = "../tempo-math" }
solana-sdk = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "time", "sync"] }
tracing = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
thiserror = { workspace = true }
axum = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
